--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,24 @@
   display: none;
 }
 
+#castle-showing {
+  display: none;
+}
+
 .clickable {
   cursor: pointer;
   color: #0088cc;
 }
 
+.clickable1 {
+  cursor: pointer;
+  color: #0088cc;
+}
+
 .clickable:hover {
+  text-decoration: underline;
+}
+
+.clickable1:hover {
   text-decoration: underline;
 }
